# cmake-demo

./: CMakeLists.txt  README.md  main.cpp
include/: Calculator.h  Pub.h
src/: CMakeLists.txt  Calculator.cpp  Pub.cpp
